Fix(ApicurioRegistryApiClient): Return empty list of global/artifact rules when request was OK, but we expect another HTTP status code than 200 OK